# ELTECHLabs

AlgorithmsAndDataStructs/: readme.txt
AlgorithmsAndDataStructs/4 term/1/: CMakeLists.txt  conio.h  main.cpp  s.h  screen.h  sh.h  shape.h
NumericalAnalysis/0/: accuracy.m
NumericalAnalysis/1/: mLagrange.m  polynom.m  polynomLagrange.m
NumericalAnalysis/2/: Chebyshev.m  mInput.m  mNewton.m  ploynomNewton.m
NumericalAnalysis/3/: algorithmRemez.m
NumericalAnalysis/4/: ordinaryLeastSquares.m
NumericalAnalysis/5/: derivative.m  integral.m  noRandomDerivative.m
OrganisationOfComputersAndSystems/1/: CMakeLists.txt  main.cpp  unsignedLong.cpp  unsignedLong.h
OrganisationOfComputersAndSystems/3/3/: main.cpp
OrganisationOfComputersAndSystems/3/3.xcodeproj/: project.pbxproj
OrganisationOfComputersAndSystems/4/: CMakeLists.txt  main  main.cpp
OrganisationOfComputersAndSystems/5/5/: main.cpp
OrganisationOfComputersAndSystems/5/5.xcodeproj/: project.pbxproj
SOLID/1/: index-1.html
SOLID/1/src/org/jeavie/: Main.java
SOLID/2/javadoc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list
SOLID/2/javadoc/index-files/: index-1.html  index-2.html  index-3.html  index-4.html
SOLID/2/javadoc/lab/: Diary.html  package-frame.html  package-summary.html  package-tree.html
SOLID/3/code/src/: DiaryApplication.java
SOLID/3/report/: 3.pages
SOLID/4/code/src/: DiaryApplication.java
SOLID/4/report/: 4.pages
(+27 files in other folders)
